--- a/escucha.html
+++ b/escucha.html
@@ -2,10 +2,10 @@
 <html lang="es">
     
     <head>
-        <meta charser="UTF-8">
+        <meta charset="UTF-8">
         <title>EN AMOR VIVES</title>
-        <link HREF="CSS/estilos.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to.fit=no"/>
+        <link HREF="css/estilos.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no"/>
     </head>
  <body>
     <header id="header">
