--- a/caminosdesanacion.html
+++ b/caminosdesanacion.html
@@ -41,7 +41,7 @@
 
   <div class="grid-dos">
     <div>
-      <img src="imagenes/CS1.JPG" alt="Meditaciones Guiadas" class="fotoizquierda">
+      <img src="imagenes/CS1.jpg" alt="Meditaciones Guiadas" class="fotoizquierda">
       <h2 id="h2izquierda1">Meditaciones Guiadas</h2>
       <p id="pizquierda1">Te invito a un espacio donde puedas abrirte a la presencia, al Amor y a la gratitud de existir.
             A través de un enfoque personalizado, co-creamos juntos la meditación que necesites, adaptada
@@ -49,7 +49,7 @@
             el camino lo construimos en sintonía.</p>
     </div>
     <div>
-      <img src="imagenes/CS2.JPG" alt="Registros Akáshicos" class="fotoizquierda">
+      <img src="imagenes/CS2.jpg" alt="Registros Akáshicos" class="fotoizquierda">
       <h2 id="h2derecha">Registros Akáshicos</h2>
       <p id="pderecha">Abro el espacio para canalizar información proveniente del Registro de Conciencia del Akasha,
             guiado por los Maestros y Guías que nos acompañan. Es un encuentro de Amor incondicional, donde recibirás la guía
@@ -57,7 +57,7 @@
             soy canal y puente para esa sabiduría.</p>
     </div>
     <div>
-      <img src="imagenes/CS3.JPG" alt="Armonización del cuerpo" class="fotoizquierda">
+      <img src="imagenes/CS3.jpg" alt="Armonización del cuerpo" class="fotoizquierda">
       <h2 id="h2izquierda2">Armonización del cuerpo</h2>
       <p id="pizquierda2">Desde el Reiki, abordamos cuerpo físico y sutil para liberar bloqueos y armonizar la energía.
       Guiados por la Conciencia en Todo, trabajamos sobre chakras, canales y campo vibracional,
