--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <section>
         <article>
-          <img src="imagenes/bannerprincipal.JPG" alt="Banner Principal">
+          <img src="imagenes/bannerprincipal.jpg" alt="Banner Principal">
         </article>
       </section>
 
