--- a/miproposito.html
+++ b/miproposito.html
@@ -39,7 +39,7 @@
         <section class="seccion-proposito">
           <div class="grid-proposito">
           <div id="imagenproposito">
-              <img src="imagenes/bannermiproposito.JPG" alt="Banner Mi Propósito" class="fotocompleta">
+              <img src="imagenes/bannermiproposito.jpg" alt="Banner Mi Propósito" class="fotocompleta">
           </div>
           <div class="miproposito">
             <h2 id="mipropositotitulo" class="titulo">Mi Propósito</h2>
@@ -60,7 +60,7 @@
             Acompañar es estar presente con el corazón abierto. Es ofrecer un espacio de escucha y cuidado, donde cada persona pueda sentirse segura para expresarse, reconectarse con su verdad y caminar a su propio ritmo. No se trata de guiar desde el saber, sino de estar al lado, en confianza, sosteniendo con amor y respeto los procesos personales. Acompañar es confiar en los tiempos internos y recordar que en el encuentro sincero también ocurre la sanación.      </p>
           </div>
           <div id="acompañarfoto-container">
-            <img src="imagenes/manosarriba.JPG" alt="Acompañar desde el amor" id="acompañarfoto">
+            <img src="imagenes/manosarriba.jpg" alt="Acompañar desde el amor" id="acompañarfoto">
           </div>
           </div>
         </section>
