--- a/caminosdesanacion.html
+++ b/caminosdesanacion.html
@@ -37,9 +37,7 @@
 
 
 
-<section id="caminos">
-
-  <div class="grid-dos">
+<section id="caminos" class="grid-dos">
     <div>
       <img src="imagenes/CS1.jpg" alt="Meditaciones Guiadas" class="fotoizquierda">
       <h2 id="h2izquierda1">Meditaciones Guiadas</h2>
@@ -58,7 +56,7 @@
     </div>
     <div>
       <img src="imagenes/CS3.jpg" alt="Armonización del cuerpo" class="fotoizquierda">
-      <h2 id="h2izquierda2">Armonización del cuerpo</h2>
+      <div class="texto-tercero"><h2 id="h2izquierda2">Armonización del cuerpo</h2>
       <p id="pizquierda2">Desde el Reiki, abordamos cuerpo físico y sutil para liberar bloqueos y armonizar la energía.
       Guiados por la Conciencia en Todo, trabajamos sobre chakras, canales y campo vibracional,
       acompañando procesos de transformación y crecimiento desde el Amor.</p>
@@ -77,6 +75,9 @@
     <footer>
       <div id="logopiedepagina">
         <img src="imagenes/logopiedepagina.png" alt="logo pie de página">
+      </div>
+       <div>
+        <p>Los contenidos publicados en estas páginas son en el marco de un trabajo práctico de la Universidad de Palermo. Los textos, logotipos, fotografías, tipografías, etc. pueden no ser de autoría propia y sólo son utilizados a los fines prácticos del ejercicio.</p>
       </div>
     </footer>
   </body>
