--- a/circulosdesabiduria.html
+++ b/circulosdesabiduria.html
@@ -57,6 +57,18 @@
         </div>
       </section>
 
+      <section>
+        <h4 id="titulovideo">Acompañame en una de mis practicas</h4>
+      </section>
+
+      <section class="video-sabiduria">
+        <video controls loop playsinline>
+          <source src="video/video.mp4" type="video/mp4">
+            Tu navegador no soporta el video.
+        </video>
+      </section>
+
+
       <section id="finalsabiduria">
         <h4>Te espero con el corazón abierto, para caminar juntos y recordar que no estamos solos<h4>
         <h3 id="finalsabiduriavioleta"> <a href="escucha.html">Tocá acá y conectemos desde el corazón</a></h3>
@@ -66,6 +78,9 @@
     <footer>
       <div id="logopiedepagina">
         <img src="imagenes/logopiedepagina.png" alt="logo pie de página">
+      </div>
+       <div>
+        <p id="textofooter">Los contenidos publicados en estas páginas son en el marco de un trabajo práctico de la Universidad de Palermo. Los textos, logotipos, fotografías, tipografías, etc. pueden no ser de autoría propia y sólo son utilizados a los fines prácticos del ejercicio.</p>
       </div>
     </footer>
   </body>
