--- a/escucha.html
+++ b/escucha.html
@@ -85,6 +85,9 @@
     <footer>
       <div id="logopiedepagina">
         <img src="imagenes/logopiedepagina.png" alt="logo pie de página">
+       </div>
+      <div>
+        <p id="textofooter">Los contenidos publicados en estas páginas son en el marco de un trabajo práctico de la Universidad de Palermo. Los textos, logotipos, fotografías, tipografías, etc. pueden no ser de autoría propia y sólo son utilizados a los fines prácticos del ejercicio.</p>
       </div>
     </footer>
   </body>
