--- a/caminosdesanacion.html
+++ b/caminosdesanacion.html
@@ -10,7 +10,7 @@
  <body>
     <header id="header">
       <script src="js/menu.js" defer></script>
-      <div id="logo">
+      <div id="logo" class="logo-superpuesto">
         <img src="imagenes/logosolo.png" alt="logo" class="fotocompleta">  
       </div>
       <nav>
